--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "aws-amplify": "^5.0.6",
     "hammerjs": "^2.0.8",
     "ionicons": "^6.0.3",
+    "ngx-image-cropper": "^6.3.2",
     "rxjs": "~7.5.0",
     "swiper": "^8.4.5",
     "tslib": "^2.3.0",
