--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@capacitor/core": "4.6.1",
     "@capacitor/filesystem": "^4.1.4",
     "@capacitor/haptics": "4.1.0",
+    "@capacitor/ios": "4.6.1",
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/preferences": "^4.0.2",
     "@capacitor/splash-screen": "^4.1.2",
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.1.9",
+    "@ionic/pwa-elements": "^3.1.1",
     "aws-amplify": "^5.0.6",
     "hammerjs": "^2.0.8",
     "ionicons": "^6.0.3",
