--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@awesome-cordova-plugins/core": "^6.3.0",
+    "@awesome-cordova-plugins/preview-any-file": "^6.3.0",
     "@aws-amplify/ui-angular": "^3.1.4",
     "@capacitor/app": "4.1.1",
     "@capacitor/camera": "^4.1.4",
@@ -33,6 +35,8 @@
     "@ionic/angular": "^6.1.9",
     "@ionic/pwa-elements": "^3.1.1",
     "aws-amplify": "^5.0.6",
+    "capacitor-blob-writer": "^1.1.4",
+    "cordova-plugin-preview-any-file": "^0.2.9",
     "hammerjs": "^2.0.8",
     "ionicons": "^6.0.3",
     "ngx-image-cropper": "^6.3.2",
