--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@capacitor/preferences": "^4.0.2",
     "@capacitor/splash-screen": "^4.1.2",
     "@capacitor/status-bar": "4.1.1",
+    "@ionic-native/core": "^5.36.0",
+    "@ionic-native/preview-any-file": "^5.36.0",
     "@ionic/angular": "^6.1.9",
     "@ionic/pwa-elements": "^3.1.1",
     "aws-amplify": "^5.0.6",
