fixes video loads on all browsers

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@capacitor/status-bar": "4.1.1",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/preview-any-file": "^5.36.0",
+    "@ionic-native/video-player": "^5.36.0",
     "@ionic/angular": "^6.1.9",
     "@ionic/pwa-elements": "^3.1.1",
     "aws-amplify": "^5.0.6",
