--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@capacitor/splash-screen": "^4.1.2",
     "@capacitor/status-bar": "4.1.1",
     "@ionic-native/core": "^5.36.0",
+    "@ionic-native/ionic-webview": "^5.36.0",
     "@ionic-native/preview-any-file": "^5.36.0",
     "@ionic-native/video-player": "^5.36.0",
     "@ionic/angular": "^6.1.9",
