--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "@ionic-native/video-player": "^5.36.0",
     "@ionic/angular": "^6.1.9",
     "@ionic/pwa-elements": "^3.1.1",
+    "@ionic/storage-angular": "^3.0.6",
     "aws-amplify": "^5.0.6",
     "capacitor-blob-writer": "^1.1.4",
     "cordova-plugin-preview-any-file": "^0.2.9",
     "hammerjs": "^2.0.8",
     "ionicons": "^6.0.3",
+    "localforage-cordovasqlitedriver": "^1.8.0",
     "ngx-image-cropper": "^6.3.2",
     "rxjs": "~7.5.0",
     "swiper": "^8.4.5",
