--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "@ionic/angular": "^6.1.9",
     "@ionic/pwa-elements": "^3.1.1",
     "@ionic/storage-angular": "^3.0.6",
+    "@videogular/ngx-videogular": "^7.0.1",
     "aws-amplify": "^5.0.6",
     "capacitor-blob-writer": "^1.1.4",
     "cordova-plugin-preview-any-file": "^0.2.9",
+    "h264-mp4-encoder": "^1.0.12",
     "hammerjs": "^2.0.8",
     "ionicons": "^6.0.3",
     "localforage-cordovasqlitedriver": "^1.8.0",
@@ -63,6 +65,7 @@
     "@angular/language-service": "^15.0.0",
     "@capacitor/cli": "4.6.1",
     "@ionic/angular-toolkit": "^6.0.0",
+    "@types/core-js": "^2.5.5",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
