--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "rxjs": "~7.5.0",
     "swiper": "^8.4.5",
     "tslib": "^2.3.0",
+    "videogular": "^2.2.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
