--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "cordova-plugin-preview-any-file": "^0.2.9",
     "h264-mp4-encoder": "^1.0.12",
     "hammerjs": "^2.0.8",
+    "imagekit": "^4.1.2",
+    "imagekitio-angular": "^1.0.2",
     "ionicons": "^6.0.3",
     "localforage-cordovasqlitedriver": "^1.8.0",
     "ngx-image-cropper": "^6.3.2",
