--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cordova-plugin-preview-any-file": "^0.2.9",
     "h264-mp4-encoder": "^1.0.12",
     "hammerjs": "^2.0.8",
+    "hls.js": "^1.3.2",
     "imagekit": "^4.1.2",
     "imagekitio-angular": "^1.0.2",
     "ionicons": "^6.0.3",
