--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -79,10 +79,10 @@
   },
   "storage": {
     "fetabe6b35e5": {
-      "dependsOn": [],
-      "providerPlugin": "awscloudformation",
       "service": "S3",
-      "serviceType": "imported"
+      "serviceType": "imported",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": []
     }
   },
   "video": {
