--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^15.0.0",
     "@awesome-cordova-plugins/core": "^6.3.0",
     "@awesome-cordova-plugins/preview-any-file": "^6.3.0",
+    "@awesome-cordova-plugins/streaming-media": "^6.3.0",
     "@aws-amplify/ui-angular": "^3.1.4",
     "@capacitor/app": "4.1.1",
     "@capacitor/camera": "^4.1.4",
