--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "@videogular/ngx-videogular": "^7.0.1",
     "aws-amplify": "^5.0.6",
     "capacitor-blob-writer": "^1.1.4",
+    "capacitor-video-player": "^3.7.5",
     "cordova-plugin-preview-any-file": "^0.2.9",
+    "cordova-plugin-streaming-media": "^2.3.0",
     "h264-mp4-encoder": "^1.0.12",
     "hammerjs": "^2.0.8",
     "hls.js": "^1.3.2",
@@ -52,6 +54,7 @@
     "ionicons": "^6.0.3",
     "localforage-cordovasqlitedriver": "^1.8.0",
     "ngx-image-cropper": "^6.3.2",
+    "objectFitPolyfill": "^2.3.5",
     "rxjs": "~7.5.0",
     "swiper": "^8.4.5",
     "tslib": "^2.3.0",
