--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@awesome-cordova-plugins/core": "^6.3.0",
+    "@awesome-cordova-plugins/image-resizer": "^6.3.0",
     "@awesome-cordova-plugins/preview-any-file": "^6.3.0",
     "@awesome-cordova-plugins/streaming-media": "^6.3.0",
+    "@awesome-cordova-plugins/video-editor": "^6.3.0",
     "@aws-amplify/ui-angular": "^3.1.4",
     "@capacitor/app": "4.1.1",
     "@capacitor/camera": "^4.1.4",
@@ -34,6 +36,7 @@
     "@capacitor/splash-screen": "^4.1.2",
     "@capacitor/status-bar": "4.1.1",
     "@ionic-native/core": "^5.36.0",
+    "@ionic-native/image-resizer": "^4.20.0",
     "@ionic-native/ionic-webview": "^5.36.0",
     "@ionic-native/preview-any-file": "^5.36.0",
     "@ionic-native/video-player": "^5.36.0",
@@ -46,6 +49,7 @@
     "capacitor-video-player": "^3.7.5",
     "cordova-plugin-preview-any-file": "^0.2.9",
     "cordova-plugin-streaming-media": "^2.3.0",
+    "cordova-plugin-video-editor-fixed": "^1.1.6",
     "h264-mp4-encoder": "^1.0.12",
     "hammerjs": "^2.0.8",
     "hls.js": "^1.3.2",
