--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@capacitor/ios": "4.6.1",
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/preferences": "^4.0.2",
+    "@capacitor/share": "^4.1.1",
     "@capacitor/splash-screen": "^4.1.2",
     "@capacitor/status-bar": "4.1.1",
     "@ionic-native/core": "^5.36.0",
