--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@capacitor/core": "4.6.1",
     "@capacitor/filesystem": "^4.1.4",
     "@capacitor/haptics": "4.1.0",
-    "@capacitor/ios": "4.6.1",
+    "@capacitor/ios": "^4.6.1",
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/preferences": "^4.0.2",
     "@capacitor/share": "^4.1.1",
@@ -64,7 +64,7 @@
     "rxjs": "~7.5.0",
     "swiper": "^8.4.5",
     "tslib": "^2.3.0",
-    "videogular": "^2.2.1",
+    "videogular": "^1.4.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -77,7 +77,7 @@
     "@angular/compiler": "^15.0.0",
     "@angular/compiler-cli": "^15.0.0",
     "@angular/language-service": "^15.0.0",
-    "@capacitor/cli": "4.6.1",
+    "@capacitor/cli": "^4.8.0",
     "@ionic/angular-toolkit": "^6.0.0",
     "@types/core-js": "^2.5.5",
     "@types/jasmine": "~4.0.0",
