fixes caching on profile page

--- a/angular.json
+++ b/angular.json
@@ -27,14 +27,17 @@
               "crypto-js/hmac-sha256",
               "crypto-js/lib-typedarrays",
               "fast-xml-parser",
+              "imagekitio-angular",
               "isomorphic-unfetch",
               "js-cookie",
+              "localforage-cordovasqlitedriver",
               "lodash",
               "lodash/get",
               "lodash/isEmpty",
               "lodash/isEqual",
               "paho-mqtt",
               "qrcode",
+              "rxjs-compat",
               "style-dictionary/lib/utils/deepExtend",
               "style-dictionary/lib/utils/flattenProperties",
               "style-dictionary/lib/utils/references/usesReference",
