finally fixes video scaling

--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "@ionic/angular": "^6.1.9",
     "@ionic/pwa-elements": "^3.1.1",
     "@ionic/storage-angular": "^3.0.6",
+    "@types/libsodium-wrappers": "^0.7.13",
     "@videogular/ngx-videogular": "^7.0.1",
     "aws-amplify": "^5.0.6",
     "capacitor-blob-writer": "^1.1.4",
+    "capacitor-file-chunk": "^1.0.0",
     "capacitor-video-player": "^3.7.5",
     "cordova-plugin-preview-any-file": "^0.2.9",
     "cordova-plugin-streaming-media": "^2.3.0",
@@ -57,6 +59,7 @@
     "imagekit": "^4.1.2",
     "imagekitio-angular": "^1.0.2",
     "ionicons": "^6.0.3",
+    "libsodium-wrappers": "^0.7.13",
     "localforage-cordovasqlitedriver": "^1.8.0",
     "ng-in-viewport": "^15.0.0",
     "ngx-image-cropper": "^6.3.2",
