--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -21,6 +21,7 @@ def capacitor_pods
   pod 'CapacitorSplashScreen', :path => '../../node_modules/@capacitor/splash-screen'
   pod 'CapacitorStatusBar', :path => '../../node_modules/@capacitor/status-bar'
   pod 'CapacitorBlobWriter', :path => '../../node_modules/capacitor-blob-writer'
+  pod 'CapacitorFileChunk', :path => '../../node_modules/capacitor-file-chunk'
   pod 'CapacitorVideoPlayer', :path => '../../node_modules/capacitor-video-player'
   pod 'CordovaPlugins', :path => '../capacitor-cordova-ios-plugins'
 end
